Changelog
=========


1.4 (unreleased)
----------------

- GEVER: Added new icons and styling for new document overview.
  [phgross]

- Dropped izug.basetheme general search.pt.
  [phgross]

- GEVER: Added specific SearchboxViewlet with the newest template from p.a.layout.
  [phgross]

- GEVER: Added special styling for required fields.
  [phgross]

- GEVER: Removed arrow on links with a _blank target for GEVER content.
  [phgross]

- GEVER: Fixed collapsible/expanded styling for nonfolderish types in contenttree.
  [phgross]

- Integrate newest version of the ftw.contentmenu.
  [phgross]

- GEVER: Added specific styling for submitting buttons.
  [phgross]

1.3 (2012-11-09)
----------------

- GEVER: Added default styling for tooltips.
  [phgross]

- GEVER: Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]

- GEVER: Fixed search customizations for plone 4.2
  [phgross]

- Fix izug batching customizations for plone 4.2.
  See https://bugs.launchpad.net/zope.tales/+bug/1002242 for more infos.
  [mathias.leimgruber]

- GEVER: Added better collapsible/expanded styling for the contenttreewidget.
  [phgross]

- Add styling for new tabbedview menu to opengever profile.
  [phgross]

- Teamraum 3.0.2 style fixes.
  [mathias.leimgruber]

- GEVER: Added sprite icon for docugate action.
  [phgross]

- Fix image margin on tabbeview overview.
  [mathias.leimgruber]

- fix blog styling.
  [tschanzt]

- Fixed french livesearch legend is over searchbox in opengever.
  [Julian Infanger]

- Add styling for new tabbedview menu to izug4 profile.
  [jone]

- Show arrow on external links or links with a _blank target.
  [jone]

- Change portlet folding icons according to "design fundamentals".
  [jone]

- Fixed french livesearch legend translation.
  [phgross]


1.2.1 (2012-09-12)
------------------

- Changed styling of tabbedview menu actions, they fold now to the right.
  [phgross]


1.2 (2012-08-22)
----------------

- Styled solr search page.
  [buchi]
