@@ -1,9 +1,6 @@
 <?xml version="1.0"?>
 <object name="portal_javascripts" meta_type="JavaScripts Registry">
     <javascript cacheable="True" compression="safe" cookable="True" expression=""
-                enabled="True" id="slideColumns.js" inline="False"
-                />
-    <javascript cacheable="True" compression="safe" cookable="True" expression=""
                 enabled="True" id="placeholders.js" inline="False"
                 />
 </object>
